--- a/edit/view/global.css
+++ b/edit/view/global.css
@@ -2,30 +2,183 @@
     margin: 0;
     padding: 0;
     font-family: Verdana, sans-serif;
+    text-decoration:none;
+    color:black;
+    box-sizing:border-box;
+}
+
+body {
+    background-color:#FFFFFF;
 }
 
 h1 {
-    background-color:#FFFFFF;
     padding:0.2em;
+    width:100%;
+}
+
+/***************/
+/**  Toolbar  **/
+/***************/
+
+div#toolbar a:hover {
+    font-weight:bold;
 }
 
 div#toolbar {
-    background-color:#D0D0D0;
-    display: flex;
-    flex-wrap:wrap;
-    padding:0.5em;
+    background-color:#E0E0E0;
     border-top:solid 1px #000000;
     border-bottom:solid 1px #000000;
     margin-bottom:1em;
-}
-
-div#toolbar > form > input {
-    margin-right:0.5em;
+    border:solid 1px;
+    display:flex;
+    flex-wrap:wrap;
     padding:0.5em;
+    width:100%;
 }
 
-div.flex_col {
-    /* background-color:#E0E0E0; */
+div#toolbar > div.left {
+    display:flex;
+    flex-wrap:wrap;
+}
+
+div#toolbar > div.left > div:first-child {
+    margin-left : 0.5em;
+}
+
+div#toolbar > div.left > div:nth-child(n+2):before {
+    content:">";
+    margin:0 0.5em;
+}
+
+div#toolbar > div.center {
+    margin-left:auto;
+    margin-left:right;
+    display:flex;
+    align-items:center;
+    flex-wrap:wrap;
+}
+
+div#toolbar > div.center > div:first-child {
+    margin-left:0.5em;
+}
+
+div#toolbar > div.center > div {
+    margin-right:0.5em;
+}
+
+div#toolbar > div.right {
+    margin-left:auto;
+    display:flex;
+    flex-wrap:wrap;
+}
+
+div#toolbar > div.right > div {
+    margin-left:0.5em;
+}
+
+div#toolbar > div.right > div:last-child {
+    margin-right : 0.5em;
+}
+
+/********/
+
+ div.flex_col {
+    display:flex;
+    flex-direction:column;
+}
+
+div.flex_row {
+    display:flex;
+    flex-direction:row;
+}
+
+div.central_menu {
+    align-items:center;
+}
+
+input[type="submit"] {
+    border:solid 1px #000000;
+    background-color:#E0E0E0;
+}
+
+div.central_menu > form > input[type="submit"] {
+    margin-bottom:1em;
+    padding:1em;
+}
+
+input, select {
+    margin:1em;
+    padding:1em;
+}
+
+label {
+    padding:1em;
+}
+
+
+div.table {
+    display:grid;
+    gap:1px;
+}
+div.table > div, div.table > a {
+    padding:0.5em;
+    outline:solid 1px;
+}
+div.table > a:hover {
+    text-decoration: underline;
+}
+
+
+div#users {
+    grid-template-columns: auto 1fr 1fr auto auto auto auto;
+}
+div#users > div:nth-child(-n+7) {
+    background-color:lightgrey;
+    font-weight:bold;
+}
+div#users > div.green {
+    background-color:lightgreen;
+    color:darkgreen;
+}
+div#users > div.red {
+    background-color:pink;
+    color:darkred;
+}
+div#users > div.blue {
+    background-color:lightblue;
+    color:darkblue;
+}
+div#users > a.orange {
+    background-color:lightyellow;
+}
+div#users > a.orange > div {
+    color:brown;
+}
+
+div#persons {
+    grid-template-columns: auto 1fr auto;
+}
+div#persons > div:nth-child(-n+3) {
+    background-color:lightgrey;
+    font-weight:bold;
+}
+
+div#positions {
+    grid-template-columns: auto 1fr auto;
+}
+div#positions > div:nth-child(-n+3) {
+    background-color:lightgrey;
+    font-weight:bold;
+}
+
+
+div.error_message {
+    border:solid 1px red;
+    color : red;
+    font-weight: bold;
+}
+
+/* div.flex_col {
     width:100%;
     height:100vh;
     display:flex;
@@ -33,7 +186,6 @@ div.flex_col {
 }
 
 div.flex_col > div.flex_central_menu {
-    /* background-color:#FFFFFF; */
     border:solid 1px #E0E0E0;
     margin:1em auto 0 auto;
     display:flex;
@@ -50,12 +202,17 @@ div.flex_col > div.flex_central_menu > form:first-child > input {
     margin-top:1em;
 }
 
-.green {color:darkgreen;}
+table#users input {
+    padding:1em;
+} */
+
+
+/* .green {color:darkgreen;}
 .red {color:darkred;}
 .blue {color:darkblue;}
-.bold {font-weight:bold;}
+.bold {font-weight:bold;} */
 
-table > tbody > tr:hover > td {
+/* table > tbody > tr:hover > td {
     background-color:#F0F0FF;
 }
 table > tbody > tr:hover > td.clickable:hover, table > tbody > tr:hover > td:hover.clickable * {
@@ -75,16 +232,16 @@ table > thead {
 table tr > td {
     border:solid 1px #000000;
     padding:0.5em;
-}
+} */
 
-div.modal_dialog_container {
+/* div.modal_dialog_container {
     background-color:rgba(0,0,0,80%);
     height:100vh;
     width:100%;
     position:absolute;
     top:0;
     left:0;
-    /* display:flex; */
+    display:flex;
     display:none;
 }
 div.modal_dialog_container > div.modal_dialog {
@@ -102,4 +259,4 @@ div.modal_dialog_container > div.modal_dialog > form {
 }
 div.modal_dialog_container > div.modal_dialog > form > div > input {
     margin-top:1em;
-}
+} */
