--- a/edit/view/global.css
+++ b/edit/view/global.css
@@ -170,6 +170,13 @@ div#positions > div:nth-child(-n+3) {
     background-color:lightgrey;
     font-weight:bold;
 }
+div#actions {
+    grid-template-columns: auto auto 1fr auto auto auto;
+}
+div#actions > div:nth-child(-n+6) {
+    background-color:lightgrey;
+    font-weight:bold;
+}
 
 div#categories {
     grid-template-columns: auto 1fr auto;
@@ -179,6 +186,21 @@ div#categories > div:nth-child(-n+3) {
     font-weight:bold;
 }
 
+div#assigned_categories {
+    grid-template-columns: 1fr;
+}
+div#assigned_categories > div:nth-child(-n+1) {
+    background-color:lightgrey;
+    font-weight:bold;
+}
+
+div#unassigned_categories {
+    grid-template-columns: 1fr;
+}
+div#unassigned_categories > div:nth-child(-n+1) {
+    background-color:lightgrey;
+    font-weight:bold;
+}
 
 div.error_message {
     border:solid 1px red;
